# astrobee_sim

./: README.md
astrobee_description/: CMakeLists.txt  package.xml
astrobee_description/models/astrobee_freeflyer/: model.sdf  model.urdf.xacro
astrobee_description/models/astrobee_iss/urdf/: model.urdf
astrobee_description/models/astrobee_unstable/: model.sdf  model.urdf
astrobee_description/models/astrobee_unstable_transparent/: model.sdf
astrobee_description/models/chaser/: model.sdf  model.urdf.xacro
astrobee_gazebo/: CMakeLists.txt  package.xml
astrobee_gazebo/worlds/: empty.world  oos_cam.world
astrobee_sim/: package.xml  setup.cfg  setup.py
astrobee_sim/astrobee_sim/: drone_path_follower.py  execute_trajectory.py  offboard_takeoff.py  rotate_robot.py  visualizer.py
astrobee_sim/launch/: gazebo_env.launch.py  px4_sim.launch.py  rotate_target.launch.py  run_chaser.launch.py  spawn_astrobee.launch.py  spawn_astrobee_chaser_target.launch.py  spawn_multiple_unstable_astrobee.launch.py
astrobee_sim/resource/: astrobee_sim_bridge.yaml  chaserOCP.yaml  rviz_config.rviz  trajectory_params.yaml  unstableRotation.yaml  visualize.rviz
